Unity Doc 21.11.0 released

--- a/unity/20.11.5.md
+++ b/unity/20.11.5.md
@@ -8,8 +8,8 @@
     <span class="wysiwyg-font-size-large"><strong>Older documentation</strong></span>
   </p>
   <p>
-    To access the documentation for version 20.11.5 and older, click
-    <a href="https://support.count.ly/hc/en-us/articles/4410908291737" target="_self" rel="undefined">here.</a>
+    To access the documentation for version 20.11.1 and older, click
+    <a href="https://support.count.ly/hc/en-us/articles/900007764903" target="_self" rel="undefined">here.</a>
   </p>
 </div>
 <p>
@@ -20,9 +20,7 @@
 <ol>
   <li>Scripting version is based on .NET 4.x equivalent</li>
   <li>API Compatibility Level is based on .NET 4.x equivalent</li>
-  <li>
-    SDK is tested on IOS, Android, Windows, UWP, Linux and Mac OSX
-  </li>
+  <li>SDK is tested on IOS, Android, Windows, UWP, and Mac OSX</li>
 </ol>
 <p>
   To look at our sample application, download the sample project from
@@ -45,15 +43,6 @@
 </p>
 <p class="wysiwyg-text-align-center">
   <img src="/hc/article_attachments/4404570305433/Screenshot_2021-03-09_at_6.02.04_PM.png" alt="Screenshot_2021-03-09_at_6.02.04_PM.png" width="435" height="719">
-</p>
-<p>
-  <span data-preserver-spaces="true">This SDK uses the </span><strong><span data-preserver-spaces="true">Newtonsoft Json</span></strong><span data-preserver-spaces="true"> package internally and it is required for the SDK to work. </span>
-</p>
-<p>
-  <span data-preserver-spaces="true">Since Unity version 2020 this package is added to your project automatically by Unity. For versions before that (2018 and 2019) you would have to install this package in the project manually. </span>
-</p>
-<p>
-  <span data-preserver-spaces="true">One way to do Install the </span><strong><span data-preserver-spaces="true">Newtonsoft Json&nbsp;</span></strong><span data-preserver-spaces="true">package would be to use the built-in package manager. You would go to </span><strong><span data-preserver-spaces="true">Windows&nbsp;</span></strong><span data-preserver-spaces="true">=&gt;&nbsp;</span><strong><span data-preserver-spaces="true">Package Manager</span></strong><span data-preserver-spaces="true">. In there you would see something like this:</span><img src="/hc/article_attachments/4410780721177/image.png" alt="image.png" width="633" height="447">
 </p>
 <h1>SDK Integration</h1>
 <h2>Minimal Setup</h2>
@@ -116,43 +105,24 @@
 </p>
 <p>
   SDK uses Preferences to keep track of application and user preferences and s<span>tore private, primitive data in key-value pairs. </span>Operational
-  data is stored in<span><a href="https://www.iboxdb.com/" target="_self"> iBoxDB</a> database file, named 'db3.box'.&nbsp;<br></span>
+  data stores in<span><a href="https://www.iboxdb.com/" target="_self"> iBoxDB</a> database file, named 'db3.box'. <a href="https://www.iboxdb.com/" target="_self">iBoxDB</a> is a fast acid table-style document NoSQL Embedded Database.&nbsp;<br></span>
 </p>
 <p>
-  <span>The specific path where the database file would be stored is different for different platforms. To determine the specific path where the database is stored, you would look at the value returned by </span><span><code>Application.persistentDataPath</code>.</span>
+  <span>The SDK saves the <a href="https://www.iboxdb.com/" target="_self">iBoxDB</a> database document file at different locations depending on platform. Following is the location of database file in case of our sample app run on Android platform: </span><span style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;">'/storage/emulated/0/Android/data/ly.count.demo/files/db3.box'</span>
 </p>
-<div>
-  <p>
-    <span>Following are the locations of the database file were used in our sample app:</span>
-  </p>
-  <ul>
-    <li>
-      <span><strong>Android:&nbsp;</strong>'/storage/emulated/0/Android/data/ly.count.demo/files/db3.box'</span>
-    </li>
-    <li>
-      <span><strong>Linux: </strong>'home/&lt;username&gt;/.config/unity3d/Countly/CountlyDotNetSDK/db3.box'</span>
-    </li>
-    <li>
-      <span><strong>Windows: </strong></span>'C:/Users/&lt;username&gt;/AppData/LocalLow/Countly/CountlyDotNetSDK/db3.box'
-    </li>
-    <li>
-      <strong>Mac OSX: </strong><span>'~/Library/Application Support/Countly/CountlyDotNetSDK/db3.box'</span>
-    </li>
-    <li>
-      <span><strong>iOS: </strong>'/var/mobile/Containers/Data/Application/&lt;random-folder-name&gt;/Documents/db3.box'</span><span></span>
-    </li>
-  </ul>
-</div>
+<p>
+  <span style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;">Unity editor create database document file at<br>"/Users/&lt;username&gt;/Library/Application Support/Countly/CountlyDotNetSDK/db3.box" on Mac OSX.</span>
+</p>
 <h2 id="require-app-permissions" class="anchor-heading">Required app permissions</h2>
 <p>
   If you expect the game to be saved
   <span>on an SD card or any other type of external storage</span>, set
   <strong>Write Permission</strong><span>&nbsp;</span><span>to 'External (SDCard). This can be found in your Android platform settings under 'Other Settings'.</span>
 </p>
-<p>
+<div class="c-message_attachment__row">
   <span class="c-message_attachment__text" data-qa="message_attachment_text"><span dir="auto">When configuring your app, make sure that it has permission to access the internet.</span></span>
-</p>
-<h2 class="c-message_attachment__row">SDK notes</h2>
+</div>
+<h2>SDK notes</h2>
 <p>
   To access the Countly Global Instance use the following code snippet:
 </p>
@@ -211,16 +181,13 @@
 <pre>Dictionary&lt;string, object&gt; segmentation = <strong>new</strong> Dictionary&lt;string, object&gt;{<br>{ "Action", "click"}<br>};<br><br><strong>await</strong> countly.CrashReports.SendCrashReportAsync(ex.Message, ex.StackTrace, LogType.Exception, segmentation, false); </pre>
 <h2 class="anchor-heading">Crash breadcrumbs</h2>
 <p>
-  Throughout your app, you can leave crash breadcrumbs. They are shory logs<span>&nbsp;that </span>would
-  describe the previous steps that were taken in your app before the crash. After
-  a crash happens, they will be sent together with the crash report.
+  Throughout your app, you can leave&nbsp;crash breadcrumbs
+  <span>Mandatory that </span>which would describe previous steps that were taken
+  in your app before the crash. After a crash happens, they will be sent together
+  with the crash report.
 </p>
 <p>The following command adds a crash breadcrumb:</p>
 <pre>countly.CrashReports.AddBreadcrumbs("breadcrumb");</pre>
-<h2 class="anchor-heading">Consent</h2>
-<p>
-  This feature uses <code>Crashes</code><span> consent. No additinal crash logs will be recorded if consent is required and not given.</span>
-</p>
 <h1>Events</h1>
 <p>
   <span style="font-weight: 400;">An </span><a href="http://resources.count.ly/docs/custom-events"><span style="font-weight: 400;">event</span></a><span style="font-weight: 400;"> is any type of action that you can send to a Countly instance, e.g. purchases, changed settings, view enabled, and so on, letting you get valuable information about your application.</span>
@@ -340,13 +307,6 @@ double duration = (DateTime.UtcNow - startTime).TotalSeconds;
 <p>
   <span>You may provide segmentation, count, and sum while recording a timed event.</span>
 </p>
-<h2 class="anchor-heading">Consent</h2>
-<p>
-  <span>This feature uses <code>Events</code> consent. </span><span>No additional events will be recorded if consent is required and not given.</span>
-</p>
-<p>
-  <span>When consent is removed, all previously started timed events will be cancelled.</span>
-</p>
 <h1>Sessions</h1>
 <h2>
   <span style="font-weight: 400;">Automatic session tracking&nbsp;</span>
@@ -380,18 +340,6 @@ double duration = (DateTime.UtcNow - startTime).TotalSeconds;
     session related to sessions and users would all be empty
   </li>
 </ul>
-<h2 class="anchor-heading">Consent</h2>
-<p>
-  <span>This feature requires<code>Sessions</code> consent. Sessions and metrics will not be recorded if consent is required and not given.</span>
-</p>
-<p>
-  If consent was given and then is removed, the current session will not get explicitly
-  ended.
-</p>
-<p>
-  If consent was removed and then given, and automatic sessions were enabled, a
-  session will automatically be started.<span></span>
-</p>
 <h1>View tracking</h1>
 <h2>Manual view recording</h2>
 <p>
@@ -407,10 +355,6 @@ double duration = (DateTime.UtcNow - startTime).TotalSeconds;
   method:
 </p>
 <pre><strong>await</strong> countly.Views.RecordCloseViewAsync("Home Scene");</pre>
-<h2 class="anchor-heading">Consent</h2>
-<p>
-  <span>This feature requires<code>Views</code> consent. No additional views will be recorded if consent is required and not given.</span>
-</p>
 <h1 class="anchor-heading" tabindex="-1">Device ID management</h1>
 <p>
   <span>A device ID is a unique identifier for your users. </span><span>You may specify the device ID yourself or allow the SDK to generate it. When providing one yourself, keep in mind that it has to be unique for all users. Some potential sources for such an id may be the users username, email or some other internal ID used by your other systems.</span>
@@ -463,13 +407,8 @@ double duration = (DateTime.UtcNow - startTime).TotalSeconds;
 <p>
   <span>Doing it this way, will not merge the previously acquired data with the new id.</span>
 </p>
-<div class="callout callout--warning">
-  <p>
-    <span style="font-weight: 400;">If device ID is changed without merging and consent was enabled, all previously given consent will be removed. This means that all features will cease to function until new consent has been given again for that new device ID.</span>
-  </p>
-</div>
 <p>
-  <span>Do note that every time you change your deviceId without a merge, it will be interpreted as a new user. Therefore implementing id management in a bad way could inflate the users count by quite a lot.<br></span>
+  <span>Do note that every time you change your deviceId without a merge, it will be interpreted as a new user. Therefore implementing id management in a bad way could inflate the users count by quite a lot.</span>
 </p>
 <h2 class="anchor-heading">Retrieving current device ID&nbsp;</h2>
 <p>
@@ -477,13 +416,6 @@ double duration = (DateTime.UtcNow - startTime).TotalSeconds;
   For that, you may use the following calls.&nbsp;
 </p>
 <pre><code class="java hljs">string usedId = Countly.Instance.Device.DeviceId;</code></pre>
-<h2 class="anchor-heading">Consent</h2>
-<p>No consent is required to change device ID.</p>
-<p>
-  If device ID is changed without merging and consent was enabled, all previously
-  given consent will be removed. This means that all features will cease to function
-  until new consent has been given again for that new device ID.
-</p>
 <h1>Push notifications</h1>
 <p>
   <span>The Unity SKD uses FCM and APNs as push notification providers for Android and iOS platforms respectively, and it doesn't support the Huawei Push Kit push service.<br></span>
@@ -628,10 +560,6 @@ double duration = (DateTime.UtcNow - startTime).TotalSeconds;
 <p>
   <span>For more information, check the sample app on <a href="http://github.com/countly/countly-sdk-unity" target="_blank" rel="noopener">Github</a>.&nbsp;<br></span>
 </p>
-<h2 class="anchor-heading">Consent</h2>
-<p>
-  <span>This feature requires<code>Push</code> consent. No push notifications will be received if consent is required and not given.</span>
-</p>
 <h1 id="user-location" class="anchor-heading garden-focus-visible" tabindex="-1" data-garden-focus-visible="true">
   <span>User location</span>
 </h1>
@@ -684,15 +612,7 @@ double duration = (DateTime.UtcNow - startTime).TotalSeconds;
 <p>To disable location after SDK initialization, call:</p>
 <pre>Countly.Instance.Location.DisableLocation();</pre>
 <p>
-  <span>These actions will erase the cached location data from the device and the server.</span><span></span>
-</p>
-<h2 class="anchor-heading">Consent</h2>
-<p>
-  <span>This feature requires<code>Location</code> consent. If consent is not given and is required, no location information will be recorded. No reverse geo IP will be performed server side. SDK will behave as if location tracking is disabled.</span>
-</p>
-<p>
-  If consent was given and then was removed, it will create a request that will
-  clear location information server side.
+  <span>These actions will erase the cached location data from the device and the server.</span>
 </p>
 <h1 id="remote-config" class="anchor-heading" tabindex="-1">Remote config</h1>
 <p>
@@ -714,14 +634,6 @@ double duration = (DateTime.UtcNow - startTime).TotalSeconds;
 <pre><strong>Dictionary</strong>&lt;<strong>string</strong>, <strong>object</strong>&gt; config = Countly.Instance.RemoteConfigs.Configs;</pre>
 <p>
   <span>The <code>Dictionary&lt;string, object&gt;</code> returns a value of the type <code>object</code> against</span><span> a key</span><span>. The developer then needs to cast it to the appropriate type.&nbsp;</span>
-</p>
-<h2 class="anchor-heading">Consent</h2>
-<p>
-  <span>This feature requires<code>RemoteConfig</code> consent. If consent is required and not give, no remote config information will be downloaded and stored.</span>
-</p>
-<p>
-  If consent was given and then is removed, locally stored remote config information
-  will be cleared.
 </p>
 <h1>User feedback</h1>
 <h2>Ratings</h2>
@@ -752,10 +664,6 @@ double duration = (DateTime.UtcNow - startTime).TotalSeconds;
     <span><strong>rating -</strong> (int) v</span><span>alue from 0 to 5 that will be set as the rating value.</span><span></span>
   </li>
 </ul>
-<h2 class="anchor-heading">Consent</h2>
-<p>
-  If consent is required, recording star rating requires<code>StarRating</code><span>consent. If consent is required and not give, it will not be possible to record star rating.</span><span></span>
-</p>
 <h1>User profiles</h1>
 <p>
   <span>For information about User Profiles, review </span><a href="http://resources.count.ly/docs/user-profiles"><span>this documentation</span></a><span>.</span>
@@ -866,10 +774,6 @@ double duration = (DateTime.UtcNow - startTime).TotalSeconds;
 </p>
 <p>Example:</p>
 <pre><code><span>Countly.Instance</span>.UserDetails.Max("Weight", 90);<br><span>Countly.Instance</span>.UserDetails.SetOnce("Distance", "10KM");<br><span>Countly.Instance</span>.UserDetails.Push("Mole", new string[] { "Left Cheek", "Back", "Toe" }); ;<br><strong>await</strong> <span>Countly.Instance</span>.UserDetails.SaveAsync();</code></pre>
-<h2 class="anchor-heading">Consent</h2>
-<p>
-  This feature requires<code>User</code><span>consent. If consent is required and not given, it will not be possible to record user profile information.</span>
-</p>
 <h1 id="user-consent-management" class="anchor-heading" tabindex="-1">User consent</h1>
 <p>
   <span>In an effort to comply with GDPR, starting from 20.11.1, Unity Countly SDK provides ways to toggle different Countly features on/off depending on the given consent.</span>
