--- a/web/21.11.md
+++ b/web/21.11.md
@@ -1,67 +1,15 @@
 <p>
-  <span style="font-weight: 400;">This documentation shows how to install the Countly JS tracker and use Countly to track your web page in detail. It applies to the SDK version 22.02.0.</span>
+  <span style="font-weight: 400;">This documentation shows how to install the Countly JS tracker and use Countly to track your web page in detail. It applies to the SDK version 21.11.X</span>
 </p>
 <div class="callout callout--info">
   <p class="callout__title">
     <span class="wysiwyg-font-size-large"><strong>Older documentation</strong></span>
   </p>
   <p>
-    To access the documentation for version 20.11.0 and older, click
-    <a href="https://support.count.ly/hc/en-us/articles/6195638333593" target="blank">here</a>.
+    To access the documentation for version 20.11 and older, click
+    <a href="https://support.count.ly/hc/en-us/articles/4408793793689" target="blank">here</a>.
   </p>
 </div>
-<p>
-  Countly can run with all browsers that supports ECMAScript 5. Minimum versions
-  of major internet browsers that fully support ES5 are:
-</p>
-<table style="border-collapse: collapse; height: 46px; padding: 2px; margin-right: auto; margin-left: auto;" border="1" cellspacing="2" cellpadding="2">
-  <tbody>
-    <tr class="wysiwyg-text-align-center" style="height: 36px;">
-      <td class="wysiwyg-text-align-center" style="width: 28.9867%; height: 36px;">
-        <strong>IE</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 1.5528%; height: 36px;">
-        <strong>Edge</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 9.68603%; height: 36px;">
-        <strong>Firefox</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 5.29042%; height: 36px;">
-        <strong>Firefox (Android)</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 36px;">
-        <strong>Opera</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 36px;">
-        <strong>Opera (Mobile)</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 36px;">
-        <strong>Safari</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 36px;">
-        <strong>Safari (iOS)</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 36px; text-align: center; vertical-align: middle;">
-        <strong>Chrome</strong>
-      </td>
-      <td class="wysiwyg-text-align-center" style="width: 22.4019%; height: 36px;">
-        <strong>Chrome (Android)</strong>
-      </td>
-    </tr>
-    <tr style="height: 22px; padding: 2px;">
-      <td class="wysiwyg-text-align-center" style="width: 28.9867%; height: 10px;">10</td>
-      <td class="wysiwyg-text-align-center" style="width: 1.5528%; height: 10px;">12</td>
-      <td class="wysiwyg-text-align-center" style="width: 9.68603%; height: 10px;">21</td>
-      <td class="wysiwyg-text-align-center" style="width: 5.29042%; height: 10px;">96</td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 10px;">15</td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 10px;">64</td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 10px;">6</td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 10px;">6</td>
-      <td class="wysiwyg-text-align-center" style="width: 10%; height: 10px;">23</td>
-      <td class="wysiwyg-text-align-center" style="width: 22.4019%; height: 10px;">98</td>
-    </tr>
-  </tbody>
-</table>
 <h1>Adding the SDK to the project</h1>
 <p>
   <span style="font-weight: 400;">In order to track your web server pages, you will need the Countly JavaScript tracking library. This library comes ready &amp; automatically hosted on your Countly server (at&nbsp;</span><a href="http://yourdomain.com/sdk/web/countly.min.js)"><span style="font-weight: 400;">http://yourdomain.com/sdk/web/countly.min.js)</span></a><span style="font-weight: 400;">&nbsp;and can be updated via command line. This library also works well with mobile applications that consist of HTML5 views.</span>
@@ -1117,50 +1065,6 @@ Countly.init();</code></pre>
     <pre><code class="java">Countly.disable_offline_mode(device_id);</code></pre>
   </div>
 </div>
-<h2>Retrieving Current Device ID</h2>
-<p>
-  If you want to execute your functions or to implement your logic depending on
-  the type of device ID that the user has Countly offers a convenience method for
-  you to do so.
-</p>
-<p>
-  You can reach the current device ID of the user with get_device_id:
-</p>
-<pre><code class="javascript">
-// you can just check if the device ID of the user is exactly what it should be
-var userId = Countly.get_device_id();
-if ( userId === "expectedId" ) {
-  //... do something
-}  
-</code></pre>
-<p>
-  Depending on whether a user is vising your site for the first time or might have
-  just logged in to their account or for many other reasons a user can have a certain
-  device ID that has a different type than another user. These types are:
-</p>
-<ul>
-  <li>DEVELOPER_SUPPLIED device ID</li>
-  <li>SDK_GENERATED device ID</li>
-  <li>TEMPORARY_ID device ID</li>
-</ul>
-<p>
-  For DEVELOPER_SUPPLIED device ID, the assignment of the ID is handled by your
-  internal logic, for SDK_GENERATED device ID, the ID of the user was generated
-  randomly by Countly, and for TEMPORARY_ID device ID, the user is currently offline
-  and no request is being sent to the servers.
-</p>
-<p>
-  You can reach the device ID type of a user any time you want simply by calling
-  the get_device_id_type function:
-</p>
-<pre><code class="javascript">
-// You can get and compare if the device ID type is correct, and do something after
-var idType = Countly.get_device_id_type();
-// here lets check if it is SDK_GENERATED. Other options are DEVELOPER_SUPPLIED and TEMPORARY_ID
-if ( idType === Countly.DeviceIdType.SDK_GENERATED ) {
-  //... do something
-}
-</code></pre>
 <h1>Heatmaps</h1>
 <h2>Tracking clicks</h2>
 <p>
@@ -2447,66 +2351,6 @@ Countly.init();</code></pre>
     action map data
   </li>
 </ul>
-<h2>Multi Instancing</h2>
-<p>
-You can initialize Countly multiple times at the same page with different app keys to send information to different apps you own and gather data with higher flexibility and precision. These new instances have all functionality of Countly but depending on your init configuration they would behave differently. You can attach different events to different Countly instances to send events to specific applications even from the same button trigger or much more. A simple integration example would be:
-</p>
-<div class="tabs">
-  <div class="tabs-menu">
-    <span class="tabs-link is-active">Asynchronous</span>
-    <span class="tabs-link">Synchronous</span>
-  </div>
-  <div class="tab">
-    <pre><code class="javascript">
-Countly = Countly || {};
-Countly.q = Countly.q || [];
-
-// initializing first instance, which will be global Countly
-Countly.init({
-	app_key: "YOUR_APP_KEY_1",
-	url: "https://try.count.ly" //your server goes here
-})
-// report event to first app
-Countly.add_event({
-	key:"first_app"
-});
-
-// initialize second instance for another app 
-Countly.q.push(["init", {
-	app_key: "YOUR_APP_KEY_2", //must have different APP key
-	url: "https://try.count.ly" //your server goes here
-}])
-// report event to second app asynchronously by passing app key as first argument
-Countly.q.push(["YOUR_APP_KEY_2", "add_event", {
-	key:"second_app"
-}]);
-    </code></pre>
-  </div>
-  <div class="tab is-hidden">
-    <pre><code class="javascript">
-// initializing first instance, which will be global Countly
-Countly.init({
-	app_key: "YOUR_APP_KEY_1",
-	url: "https://try.count.ly" //your server goes here
-})
-// report event to first app
-Countly.add_event({
-	key:"first_app"
-});
-
-// initialize second instance for another app
-var Countly2 = Countly.init({
-	app_key: "YOUR_APP_KEY_2", //must have different APP key
-	url: "https://try.count.ly" //your server goes here
-});
-// report event to second app
-Countly2.add_event({
-	key:"second_app"
-});
-    
-    </code></pre>
-  </div>
-</div>
 <h2>SDK Internal Limits</h2>
 <p>
   Countly is highly customizable and let's you take a huge part at the control
@@ -2618,71 +2462,4 @@ Countly.max_stack_trace_line_length = 300;
 });</code></pre>
   </div>
 </div>
-<h2>UTM tags</h2>
-<p>
-  If you are providing possible users links to your website, and if you would like
-  to track those users who have clicked those links, you can do so by using some
-  utm tags within your links and Countly web SDK would recognize and record these
-  users for you.
-</p>
-<p>
-  The web SDK offers you two options to set these tags in your links. First you
-  can use the default tags that has been set to be recognized by the SDK by default.
-  These tags are 'source', 'medium', 'campaign', 'term' and 'content'. If you add
-  any or all of these tags into your links as query Countly would recognize and
-  record them accordingly. An example usage of the default tags is as follows:
-</p>
-<pre><code class="javascript">
-// basic structure of a link that contains all available default tags
-yourUrl + ?utm_source=someValue&amp;utm_medium=someValue&amp;utm_campaign=someValue&amp;utm_term=someValue&amp;utm_content=someValue
-
-//or you can omit tags
-yourUrl + ?utm_source=someValue&amp;utm_campaign=someValue
-
-// yourUrl is the url of your site and someValue is any string value you want to pass
-</code></pre>
-<p>
-  Second option is to define your custom utm tags during the initialization of
-  Countly and use those tags in your links. You have to provide a map of key value
-  pairs where the key is the tag and the value is 'true' if you want the Countly
-  to check for that key in your links:
-</p>
-<div class="tabs">
-  <div class="tabs-menu">
-    <span class="tabs-link is-active">Asynchronous</span>
-    <span class="tabs-link">Synchronous</span>
-  </div>
-  <div class="tab">
-    <pre><code class="javascript">
-Countly.app_key = "YOUR_APP_KEY";
-Countly.device_id = "1234-1234-1234-1234";
-// add your custom tags and set their value to true
-Countly.utm = {tag1: true, tag2: true};
-
-// then your links should look like this:
-yourUrl + ?utm_tag1=someValue&amp;utm_tag2=someValue
-</code></pre>
-  </div>
-  <div class="tab is-hidden">
-    <pre><code class="javascript">Countly.init({
-    app_key:"YOUR_APP_KEY",
-    device_id:"1234-1234-1234-1234",
-    // add your custom tags and set their value to true
-    utm: {tag1: true, tag2: true}
-});
-
-// then your links should look like this:
-yourUrl + ?utm_tag1=someValue&amp;utm_tag2=someValue
-</code></pre>
-  </div>
-</div>
-<p>
-  The values you have provided will be captured and stored as user properties,
-  under the keys 'utm_source', 'utm_medium', 'utm_campaign', 'utm_term' and 'utm_content'
-  if you have used the default tags or as 'utm_yourCustomTag1', 'utm_yourCustomTag1'...
-  if you have used custom tags, together with the corresponding user when a user
-  clicks that link. This will enable you to segment users in all places around
-  the dashboard, where granular data is used and segmentation capabilities are
-  provided.
-</p>
 <p>&nbsp;</p>
